fix: consertando a posição do botão dark mode

--- a/3-Portifolio/src/components/Header/Header.module.css
+++ b/3-Portifolio/src/components/Header/Header.module.css
@@ -62,7 +62,7 @@ header{
 }
 
 .darkMode{
-    position: fixed;
+    position: absolute;
     top: 30px;
     right: 6%;
 }
